--- a/src/main/resources/templates/missions/confirmed-mission/create-confirmed-mission.html
+++ b/src/main/resources/templates/missions/confirmed-mission/create-confirmed-mission.html
@@ -1,75 +1,58 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!-- Bootstrap CSS -->
-    <link href="/webjars/bootstrap/5.3.2/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="/webjars/bootstrap-icons/1.11.1/font/bootstrap-icons.min.css">
-
-</head>
+<div th:replace="~{fragments/head :: head}"></div>
 <body>
 <div class="container">
     <div class="row">
-        <div class="card col-lg-6 col-md-6 justify-content-center container py-4">
+        <div class="card col-md-9 justify-content-center container py-4">
             <div class="card-header">
-                <h1>Mise à jour</h1>
+                <h1>Confirmation</h1>
             </div>
             <div class="card-body">
-                <p>Description : <span th:text="${mission.title}"></span></p>
-                <p th:text="${mission.missionType.name}"></p>
-                <p>Description : <span th:text="${mission.description}"></span></p>
-                <p th:text="${mission.comment}"></p>
-                <p th:text="${@translationUtils.translateMissionStatus(mission.status)}"></p>
-                <form th:action="@{/missions/plan/{id}(id=${mission.uuid})}" method="post" id="planMissionForm" th:object="${mission}">
+                <div class="row">
+                    <div class="col-md-6">
+                        <h3>Informations de la mission</h3>
+                        <hr>
+                        <p>Titre : <span th:text="${confirmation.mission.title}"></span></p>
+                        <p>Type de mission : <span th:text="${confirmation.mission.missionType.name}"></span></p>
+                        <p>Description : <span th:text="${confirmation.mission.description}"></span></p>
+                        <p>Commentaire : <span th:text="${confirmation.mission.comment}"></span></p>
+                        <p>Statut : <span th:text="${@translationUtils.translateMissionStatus(confirmation.mission.status)}"></span></p>
+                        <p>Date de début : <span th:text="${#temporals.format(confirmation.mission.startDateTime, 'dd/MM/yyyy HH:mm')}"></span></p>
+                        <p>Date de fin : <span th:text="${#temporals.format(confirmation.mission.endDateTime, 'dd/MM/yyyy HH:mm')}"></span></p>
+                    </div>
+                    <div class="col-md-6">
+                        <h3>Ajouter des volontaires</h3>
+                        <hr>
+                        <form th:action="@{/missions/confirm/{id}(id=${confirmation.mission.uuid})}" method="post" id="confirmMissionForm" th:object="${confirmation}">
+                            <input type="hidden" name="missionUuid" th:value="${confirmation.mission.uuid}">
+                            <div class="form-group">
+                                <input type="hidden" name="missionUuid" th:value="${confirmation.mission.uuid}">
+                                <ul class="list-group">
+                                    <li th:each="volunteer, volunteerStat : ${confirmation.availableVolunteers}" class="list-group-item">
+                                        <div class="form-check">
+                                            <input class="form-check-input" type="checkbox" th:value="${volunteer.uuid}" th:name="volunteerUuids" th:id="${'volunteer' + volunteerStat.index}">
+                                            <label class="form-check-label" th:for="${'volunteer' + volunteerStat.index}">
+                                                <strong th:text="${volunteer.lastName.toUpperCase()} + ' ' + ${volunteer.firstName}"></strong> -
+                                                <span th:text="${volunteer.email}"></span>,
+                                                <span th:text="${volunteer.phoneNumber}"></span>
+                                            </label>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </div>
+                        </form>
+                    </div>
+                </div>
 
-                    <input type="hidden" name="uuid" id="uuid" th:field="*{uuid}">
-                    <input type="hidden" name="status" id="status" th:field="*{status}">
-                    <input type="hidden" name="missionTypeUuid" id="missionTypeUuid" th:field="*{missionType.uuid}">
-                    <input type="hidden" name="missionTypeActive" id="missionTypeActive" th:field="*{missionType.active}">
-                    <input type="hidden" name="missionTypeSelected" id="missionTypeSelected" th:field="*{missionType.selected}">
-                    <input type="hidden" th:field="*{title}" id="name">
-                    <input type="hidden" th:field="*{missionType}" id="missionType">
-                    <input type="hidden" th:field="*{description}" id="description" >
-                    <input type="hidden" th:field="*{comment}" id="comment">
-                    <input type="hidden" th:field="*{requiredVolunteerNumber}" id="requiredVolunteerNumber">
-
-                    <div id="dateAlert" class="alert alert-danger d-none" role="alert">
-                        La date de début doit être antérieure à la date de fin.
-                    </div>
-                    <div class="form-group">
-                        <label for="startDateTime" class="col-form-label">Date de Début:</label>
-                        <input th:value="*{startDateTime}" id="startDateTime" name="startDateTime" type="datetime-local" class="form-control" required="required">
-                    </div>
-                    <div class="form-group">
-                        <label for="endDateTime" class="col-form-label">Date de Fin:</label>
-                        <input th:value="*{endDateTime}" type="datetime-local" id="endDateTime" name="endDateTime" class="form-control" required="required">
-                    </div>
-                </form>
             </div>
             <div class="card-footer">
                 <a class="btn btn-outline-secondary pb-2" th:href="@{/missions}">Annuler</a>
-                <button type="submit" form="planMissionForm" class="btn btn-primary">Planifier</button>
+                <button type="submit" form="confirmMissionForm" class="btn btn-primary">Planifier</button>
             </div>
         </div>
     </div>
 </div>
-<script>
-    document.getElementById('planMissionForm').addEventListener('submit', function(e) {
-        var startDateTime = document.getElementById('startDateTime').value;
-        var endDateTime = document.getElementById('endDateTime').value;
-        var dateAlert = document.getElementById('dateAlert');
-
-        if (startDateTime > endDateTime) {
-            dateAlert.classList.remove('d-none');
-            e.preventDefault();
-        } else {
-            dateAlert.classList.add('d-none');
-        }
-    });
-</script>
 
 
 <div th:replace="~{fragments/scripts :: scripts}"></div>
